spade-tests/src/snapshots/spade_tests__typeinference__array_pattern_length_must_match.snap
---
source: spade-tests/src/typeinference.rs
---
fn test() {
    let array = [0];
    match array {
        [0, 0] => true
    }
}


error: Expected type [Number<_>; 1], got [Number<_>; 2]
  ┌─ testinput:4:9
  │
2 │     let array = [0];
  │                 --- Type 1 inferred here
3 │     match array {
4 │         [0, 0] => true
  │         ^^^^^^ Expected [Number<_>; 1]
  │
  = note: Expected: 1
                in: [Number<_>; 1]
               Got: 2
                in: [Number<_>; 2]
